--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,14 @@
         </li>
         {%- endfor -%}
     </ul>
+    <h2>request headers:</h2>
+    <ul>
+        {%- for k, v in request_headers -%}
+        <li>
+            <pre>{{k}}: {{v}}</pre>
+        </li>
+        {%- endfor -%}
+    </ul>
 </body>
 <script>
     let ws = new WebSocket("ws://localhost:8080/test/123/");
